# shelob-prototype

./: README.md  pyproject.toml
shelob/core/: attribute.py  graph.py  node.py
tests/: conftest.py  test_shelob.py
tests/core/: test_attribute.py  test_graph.py  test_node.py
